Tue Jan 15 19:05:58 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c,
	gtkexport.c, gtkgame.c, gtkmovelist.c, gtkoptions.c, import.c,
	makebearoff.c, makehyper.c, multithread.c, play.c, render.c, sgf.c,
	board3d/drawboard3d.c: Fix some minor uint//int gcc warnings

Sun Jan 13 09:03:18 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, bearoff.c, bearoff.h, external_l.l, external_y.y,
	gnubg.c, gtkgame.c, gtkgame.h, gtkpanels.c, multithread.c,
	multithread.h, sound.c, sound.h, board3d/fun3d.h, lib/cache.c,
	non-src/external_y.c, non-src/external_l.c: fix some incomplete or
	missing prototypes

Sun Jan 13 01:07:21 CET 2008 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, gnubg.c, makehyper.c, multithread.c, sound.c:
	compiler warnings and Sleep is a win32 function

Sun Jan 13 00:36:48 CET 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, common.h: change how acosf, signbit and lrint are
	checked for to allow to compile with -Werror

Sat Jan 12 23:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* sound.c, set.c, gnubg.c: Re-introduce exit sound, but disabled by default

Wed Jan  2 15:48:02 CET 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, doc/Makefile.am, lib/Makefile.am, non-src/Makefile.am,
	po/POTFILES.in: fix make distcheck
	* multithread.h: fix typo and add MT_SafeDecCheck

Tue Jan 01 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* relational.c, gtkrelational.c, database.py, gnubg.sql:
		Simplify relational database by removing "environments".

Wed Dec 19 11:06:45 CET 2007 Christian Anthon <anthon@kiku.dk>

	* lib/cache.c: only lock one level

Wed Dec 19 10:32:27 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, util.c, board3d/drawboard3d.c, board3d/misc3d.h,
	lib/cache.c: small changes to previous

Tue Dec 18 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* Code changes so -ansi -pedantic (just about) works for gcc on windows.
